  - GCC_EXTRA_VER from 8.3.0 to 9.2.0
  - QT5_VER from 5.12.3 to 5.14.1
  - OPENSSL_VER from 1.0.2r to 1.1.1d
  - PROTOBUF_VER from 3.6.1 to 3.9.0
  - PCRE2_VER from 10.33 to 10.34
  - SDL2_VER from 2.0.8 to 2.0.10
  - MXML_VER from 2.11 to 3.1
  - TINYXML2_VER from 6.0.0 to 7.0.1
  - TIDY_HTML5_VER from 5.4.0 to 5.6.0
  - FFMPEG_VER from 4.1.3 to 4.2.2
  - GDAL_VER from 2.2.3 to 2.2.4

--- v3.6 (2019-05-23) ---
* Add new package: libuuid.
* Package libfcgi: update PKG_URL.
* Package fontconfig depends on package libuuid now.
* Add function GenerateConfigureScript() and use it for simplifying build
  scripts of some packages.
* Improve cmake toolchain files: added BUILD_SHARED_LIBS, BUILD_STATIC_LIBS,
  BUILD_SHARED and BUILD_STATIC variables.
* Update in all static configs:
  - ATTR_VER from 2.4.47 to 2.4.48
  - SQLITE_VER from 3.23.2 to 3.28.0
  - LIBXML2_VER from 2.9.4 to 2.9.9
  - LIBXSLT_VER from 1.1.29 to 1.1.33
  - EXPAT_VER from 2.2.5 to 2.2.6
  - TIFF_VER from 4.0.9 to 4.0.10
  - LIBGPG_ERROR_VER from 1.27 to 1.36
  - LIBGCRYPT_VER from 1.8.1 to 1.8.4
  - OPENSSL_VER from 1.0.2q to 1.0.2r
  - FREETYPE_VER from 2.8.1 to 2.10.0
  - FONTCONFIG_VER from 2.12.6 to 2.13.1
  - HUNSPELL_VER from 1.6.2 to 1.7.0
  - LIBIDN_VER from 1.33 to 1.35
  - CURL_VER from 7.61.1 to 7.65.0
* Update in all configs:
  - GCC_EXTRA_VER from 8.2.0 to 8.3.0
  - BOOST_VER from 1.65.0 to 1.67.0
  - LIBFCGI_VER from 2.4.0 to 2.4.2
  - PCRE_VER from 8.42 to 8.43
  - PCRE2_VER from 10.30 to 10.33
  - FFMPEG_VER from 4.0.2 to 4.1.3
  - QT5_VER from 5.12.1 to 5.12.3

--- v3.5 (2019-02-18) ---
* Add new package: libxkbcommon.
* Exclude package qtwebkit from list of packages for `make all` target.
* Update package fontconfig: set FONTCONFIG_PATH to "/etc/fonts" at
  configuration stage for fixing of runtime error:
  "Fontconfig error: Cannot load default config file"
* Update packages pcre and pcre2: build using gcc-extra for enabling of C++11
  features in libpcrecpp.