@@ -171,7 +171,7 @@ MXML_VER=2.11
 TINYXML2_VER=6.0.0
 
 LIBIDN2_VER=2.3.0
-LIBSIGNAL_PROTOCOL_C_VER=2.3.2
+LIBSIGNAL_PROTOCOL_C_VER=2.3.3
 
 QTWEBKIT_VER=5.4.2
 QTWEBKIT_GIT_VER=ea590d74eae21dd70b189e0b8ba4bfb6a9bddb94
