@@ -164,7 +164,7 @@ MXML_VER=2.11
 TINYXML2_VER=6.0.0
 
 LIBIDN2_VER=2.3.0
-LIBSIGNAL_PROTOCOL_C_VER=2.3.2
+LIBSIGNAL_PROTOCOL_C_VER=2.3.3
 
 QTWEBKIT_VER=5.212
 QTWEBKIT_GIT_VER=72cfbd7664f21fcc0e62b869a6b01bf73eb5e7da
